--- a/src/less/side.less
+++ b/src/less/side.less
@@ -8,7 +8,7 @@ aside {
   width: 200px;
   background-color: @WGS03;
   .side-list {
-    height: 100%;
+    height: auto;
     span {
       cursor: pointer;
       color: @WGS09;
