--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,1 +1,18 @@
+/*main style*/
+html,
+body {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
 
+#wrapper {
+    position: relative;
+    height: auto;
+    min-height: 100%;
+    #container {
+        height: auto;
+        min-height: 100%;
+        overflow: auto;
+    }
+}
