--- a/src/less/form.less
+++ b/src/less/form.less
@@ -1,4 +1,5 @@
 /*form*/
+@import "base/base";
 
 input {
     margin: 0;
@@ -6,5 +7,21 @@ input {
 }
 
 .form-group {
+    display: block;
     margin: 0 0 20px 0;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: @input-height-base;
+    padding: @padding-base-vertical @padding-base-horizontal;
+    font-size: @font-size-base;
+    line-height: @line-height-base;
+    color: @input-color;
+    //background-color: @input-bg;
+    //background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
+    //border: 1px solid @input-border;
+    //border-radius: @input-border-radius; // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
+    //.box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
 }
