--- a/src/less/base/base.less
+++ b/src/less/base/base.less
@@ -5,6 +5,7 @@
 @gray:                   lighten(@gray-base, 33.5%); // #555
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
+@white:                  #FFF;
 
 @WC01: #1c6dea;
 @WC02: #2f7ef8;
