--- a/src/less/side.less
+++ b/src/less/side.less
@@ -6,12 +6,12 @@ aside {
   top: 0;
   height: 100%;
   width: 200px;
-  background-color: @WGS03;
+  background-color: @gray;
   .side-list {
     height: auto;
     span {
       cursor: pointer;
-      color: @WGS09;
+      color: @white;
       font-size: 28px;
       &:hover {
         background-color: @WC02;
@@ -24,7 +24,7 @@ aside {
       padding: 0;
       li {
         cursor: pointer;
-        color: @WGS09;
+        color: @gray;
         font-size: 20px;
       }
     }
